--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,16 +11,34 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
 
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: secret
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+    steps:
+      
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+
+    - name: Run Migrations
+      run: make migrateup
 
     - name: Test
       run: make test
