--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,11 @@ services:
       - POSTGRES_DB=simple_bank
     ports:
       - 5432:5432
+    volumes:
+      - data-volume:/var/lib/postgresql/data
+  
+  redis:
+    image: redis:7.2.5-alpine
 
   api:
     build:
@@ -18,7 +23,13 @@ services:
       - "9090:9090"
     environment:
       - DB_SOURCE=postgresql://root:secret@postgres:5432/simple_bank?sslmode=disable
+      - REDIS_ADDRESS=redis:6379
+
     depends_on:
       - postgres
+      - redis
     entrypoint: ["/app/wait-for.sh", "postgres:5432", "--", "/app/start.sh"]
     command: ["/app/main"]
+
+volumes:
+  data-volume:
